--- a/index.html
+++ b/index.html
@@ -1,41 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub Pages Site</title>
+  <title>Vores Lille Smukke Gay Pattegris</title>
   <style>
     body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 50px;
-      background: #f4f4f4;
-      color: #333;
+      margin: 0;
+      padding: 0;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: #1a1a1a;
+      color: white;
     }
-    h1 {
-      color: #2c3e50;
+
+    .rainbow-text {
+      font-size: 2em;
+      font-weight: bold;
+      background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: rainbow 4s linear infinite;
     }
-    .box {
-      background: white;
-      padding: 2rem;
-      margin: 2rem auto;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 500px;
+
+    @keyframes rainbow {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
     }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      text-decoration: none;
-      color: #007acc;
+
+    img {
+      max-width: 90%;
+      max-height: 500px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+      margin-bottom: 20px;
+    }
+
+    .heart {
+      font-size: 3rem;
+      animation: pulse 1s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.2); }
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>🎉 GitHub Pages is Live!</h1>
-    <p>If you're seeing this page, your GitHub Pages site is working.</p>
-    <a href="https://github.com/your-username/your-repo">View on GitHub</a>
-  </div>
+  <img src="images/dan.jpg" alt="Dan" />
+  <div class="rainbow-text">Vores lille smukke gay pattegris</div>
+  <div class="heart">❤️</div>
 </body>
 </html>
